Updating to use flask login for login

--- a/src/templates/create_account.html
+++ b/src/templates/create_account.html
@@ -6,7 +6,7 @@
    </head>
    <body>
       <h3>Welcome {{email}}...let's get you setup:</h3>
-      <form action="/create_account" method="POST">
+      <form action="/update_account" method="POST">
          <input type="checkbox" id="is_admin" name="is_admin" value="off">
          <label for="is_admin"> Is admin</label><br>
 
